# multiagent-deep-RL-sim

./: Avance3Equipo49.ipynb  CMakeLists.txt  package.xml  rl_state_probe.py  robot_arena.world
bridge/: robot_bridge.yaml
data/: qlearn_metrics.jsonl  qtable.json  rollouts.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/box_pushing_agent/lib/box_pushing_agent/: talker
install/box_pushing_agent/share/box_pushing_agent/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gazebo_differential_drive_robot/share/gazebo_differential_drive_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gazebo_differential_drive_robot/share/gazebo_differential_drive_robot/cmake/: gazebo_differential_drive_robotConfig-version.cmake  gazebo_differential_drive_robotConfig.cmake
install/multiagent_deep_rl_sim/lib/multiagent_deep_rl_sim/: push_to_goal.py  qlearn_push_agent.py
install/multiagent_deep_rl_sim/share/multiagent_deep_rl_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/multiagent_deep_rl_sim/share/multiagent_deep_rl_sim/bridge/: robot_bridge.yaml
install/multiagent_deep_rl_sim/share/multiagent_deep_rl_sim/cmake/: multiagent_deep_rl_simConfig-version.cmake  multiagent_deep_rl_simConfig.cmake
install/multiagent_deep_rl_sim/share/multiagent_deep_rl_sim/environment/: ament_prefix_path.dsv  path.dsv
install/multiagent_deep_rl_sim/share/multiagent_deep_rl_sim/launch/: test_launch.launch.py
install/multiagent_deep_rl_sim/share/multiagent_deep_rl_sim/models/diff_drive/: model.config  model.sdf  robot.gazebo  robot.xacro
install/multiagent_deep_rl_sim/share/multiagent_deep_rl_sim/models/push_box/: model.config  model.sdf
install/multiagent_deep_rl_sim/share/multiagent_deep_rl_sim/worlds/: robot_arena.world
launch/: single_agent.launch.py  test_launch.launch.py
log/: latest_build  latest_list
models/diff_drive/: model.config  model.sdf  robot.gazebo  robot.xacro
models/push_box/: model.config  model.sdf
nodes/: box_push_a2c_policy_node.py  box_push_dqn_policy_node.py  box_push_observation_node.py
scripts/: push_to_goal.py  qlearn_push_agent.py
src/box_pushing_agent/: setup.cfg  setup.py
src/box_pushing_agent/box_pushing_agent/: talker.py
worlds/: box_world.sdf  diffdrive_robot.sdf  robot_arena.world
(+9 files in other folders)
