<?xml version="1.0"?>
<package format="3">
  <name>box_pushing_agent</name>
  <version>0.0.1</version>
  <description>Python node(s) for box pushing demo</description>
  <maintainer email="you@example.com">Julia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
